--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   sqflite: ^2.2.8+2
   cloud_firestore: ^4.7.0
   firebase_storage: ^11.2.0
+  firebase_messaging: ^14.6.0
+  firebase_analytics: ^10.4.0
 
 dev_dependencies:
   flutter_test:
