--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   geocoding: ^2.1.0
 
 
+  firebase_messaging: ^14.6.0
+  firebase_analytics: ^10.4.0
 
 dev_dependencies:
   flutter_test:
