--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
-        android:label="roastyourex"
+        android:label="Roast your EX"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
