--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   geocoding: ^2.1.0
   firebase_messaging: ^14.6.0
   firebase_analytics: ^10.4.0
+  flutter_local_notifications: ^14.1.0
 
 
 dev_dependencies:
